--- a/index.html
+++ b/index.html
@@ -5,13 +5,123 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web-Studio-(Version-3.0)</title>
 </head>
 
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, ut maxime voluptates doloremque nostrum sed,
-        architecto earum porro quia repellat, numquam atque? Sint cumque veritatis quod maiores illo atque similique.
-    </h1>
+    <!-- header -->
+
+    <header>
+        <a href="/">webstudio</a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="">Studio</a>
+                </li>
+                <li>
+                    <a href="">Portfolio</a>
+                </li>
+                <li>
+                    <a href="">Contacts</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- main content -->
+
+    <main>
+        <div>
+            <section>
+                <h1>Effective Solutions
+                    for Your Business</h1>
+            </section>
+            <button type="button">Order Service</button>
+        </div>
+
+        <section>
+            <h2 hidden>Our advantages</h2>
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business
+                        problem to walk away with the perfect and creative solution.</p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.</p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                        risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.
+                    </p>
+                </li>
+
+            </ul>
+        </section>
+        <section>
+            <h2>What are we doing</h2>
+            <ul>
+                <li>
+                    <img src="./images/what-are-we-doing/img1.jpg" alt="desktop-program" width="360" height="300">
+                </li>
+                <li>
+                    <img src="./images/what-are-we-doing/img2.jpg" alt="mobile-app" width="360" height="300">
+                </li>
+                <li>
+                    <img src="./images/what-are-we-doing/img3.jpg" alt="design-for-webpage" width="360" height="300">
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <img src="./images/our-team/img.jpg" alt="worker-1" width="264" height="260">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="/images/our-team/img(1).jpg" alt="worker-2" width="264" height="260">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/our-team/img(2).jpg" alt="worker-3" width="264" height="260">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/our-team/img(3).jpg" alt="worker-4" width="264" height="260">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+
+    <!-- footer -->
+
+    <footer>
+        <a href="/">webstudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 </body>
 
 </html>
