--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
                     <a href="">Contacts</a>
                 </li>
             </ul>
-            <ul>
-                <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
         </nav>
+
+        <ul>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+            </li>
+        </ul>
+
     </header>
 
     <!-- main content -->
@@ -93,22 +95,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/our-team/img.jpg" alt="worker-1" width="264" height="260">
+                    <img src="./images/our-team/img-1.jpg" alt="worker-1" width="264" height="260">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/our-team/img(1).jpg" alt="worker-2" width="264" height="260">
+                    <img src="/images/our-team/img-2.jpg" alt="worker-2" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/our-team/img(2).jpg" alt="worker-3" width="264" height="260">
+                    <img src="./images/our-team/img-3.jpg" alt="worker-3" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/our-team/img(3).jpg" alt="worker-4" width="264" height="260">
+                    <img src="./images/our-team/img-4.jpg" alt="worker-4" width="264" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
