--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/our-team/img-2.jpg" alt="worker-2" width="264" height="260">
+                    <img src="./images/our-team/img-2.jpg alt=" worker-2" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
