--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- header -->
 
     <header>
-        <a href="/">webstudio</a>
+        <a href="./index.html">webstudio</a>
         <nav>
             <ul>
                 <li>
@@ -121,7 +121,7 @@
     <!-- footer -->
 
     <footer>
-        <a href="/">webstudio</a>
+        <a href="./index.html">webstudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
