--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -44,14 +44,14 @@
     <!-- main content -->
 
     <main>
-        <div>
-            <section>
-                <h1>Effective Solutions
-                    for Your Business</h1>
-            </section>
+        <!-- section-1 -->
+        <section>
+            <h1>Effective Solutions
+                for Your Business</h1>
             <button type="button">Order Service</button>
-        </div>
+        </section>
 
+        <!-- section-2 -->
         <section>
             <h2 hidden>Our advantages</h2>
             <ul>
@@ -76,9 +76,10 @@
                         problem-solving.
                     </p>
                 </li>
-
             </ul>
         </section>
+
+        <!-- section-3 -->
         <section>
             <h2>What are we doing</h2>
             <ul>
@@ -93,6 +94,8 @@
                 </li>
             </ul>
         </section>
+
+        <!-- section-4 -->
 
         <section>
             <h2>Our Team</h2>
@@ -124,8 +127,10 @@
     <!-- footer -->
 
     <footer>
-        <a href="./index.html">webstudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div>
+            <a href="./index.html">webstudio</a>
+            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
 </body>
 
