--- a/index.html
+++ b/index.html
@@ -28,14 +28,8 @@
         </nav>
 
         <address>
-            <ul>
-                <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
         </address>
 
 
@@ -44,7 +38,7 @@
     <!-- main content -->
 
     <main>
-        <!-- section-1 -->
+        <!-- hero -->
         <section>
             <h1>Effective Solutions
                 for Your Business</h1>
