--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- header -->
 
     <header>
-        <a href="./index.html">webstudio</a>
         <nav>
+            <a href="">webstudio</a>
             <ul>
                 <li>
                     <a href="">Studio</a>
@@ -27,12 +27,10 @@
             </ul>
         </nav>
 
-        <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
-        </address>
-
-
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
     </header>
 
     <!-- main content -->
@@ -122,7 +120,7 @@
 
     <footer>
         <div>
-            <a href="./index.html">webstudio</a>
+            <a href="">webstudio</a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     </footer>
