--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header>
         <nav>
-            <a href="">webstudio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li>
                     <a href="">Studio</a>
@@ -121,10 +121,11 @@
     <!-- footer -->
 
     <footer>
-        <div>
-            <a href="">webstudio</a>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </div>
+        <a href="./index.html">WebStudio</a>
+        <p>Increase the flow of customers and <br>
+            sales for your business with digital <br>
+            marketing & growth solutions.
+        </p>
     </footer>
 </body>
 
